# msi-gen

./: .gitignore  Cargo.toml  README.md  test.toml
examples/: example_2.msi
examples/example_1/: example.toml  example_1.msi  example_1.toml
examples/example_1/files/pg_files/: TestFile.txt
examples/example_1/files/pg_files/test_folder/: NestedFile.txt
resources/: empty.msi
src/: builder.rs  command_line.rs  config.rs  files.rs  helpers.rs  lister.rs  main.rs  scan.rs
src/command/: builder.rs  command_line.rs  lister.rs  mod.rs
src/models/: directory.rs  error.rs  file.rs  sequencer.rs
src/modules/: mod.rs
src/modules/component/: directory.rs  file.rs  mod.rs
src/modules/config/: mod.rs  msi_config.rs  product_information.rs  summary_information.rs
src/modules/helpers/: error.rs  log_return.rs  mod.rs  scan.rs
src/modules/tables/: component.rs  directory.rs  file.rs  mod.rs
src/tables/: component.rs  file.rs  mod.rs
