[package]
name = "msipmbuild"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
camino = "1.1.9"
clap = { version = "4.5.34", features = ["derive"] }
cli-table = "0.5.0"
derive-new = "0.7.0"
flexi_logger = "0.29.8"
flexstr = { version = "0.9.2", features = ["serde"] }
getset = "0.1.5"
itertools = "0.14.0"
log = "0.4.27"
msi = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v4"] }
